--- a/jobs/openshift/Jenkinsfile
+++ b/jobs/openshift/Jenkinsfile
@@ -156,7 +156,7 @@ def patch_tito(pipeline) {
 
     if (tito_version == '0.6.11') {
         pipeline.echo "Patching tito tagger customizations for tito-0.6.11"
-        def tagger_py = .tito/lib/origin/tagger/__init__.py
+        def tagger_py = ".tito/lib/origin/tagger/__init__.py"
         pipeline.dir(package_name) {
             // remove the get_tag_for_version function
             pipeline.sh "sed -e '/_get_tag_for_version/,\$d' ${tagger_py}"
