--- a/jobs/openshift/Jenkinsfile
+++ b/jobs/openshift/Jenkinsfile
@@ -159,7 +159,7 @@ def patch_tito(pipeline) {
         def tagger_py = ".tito/lib/origin/tagger/__init__.py"
         pipeline.dir(package_name) {
             // remove the get_tag_for_version function
-            pipeline.sh "sed -e '/_get_tag_for_version/,\$d' ${tagger_py}"
+            pipeline.sh "sed -i -e '/_get_tag_for_version/,\$d' ${tagger_py}"
             // add the version we want
             pipeline.sh '''cat >> ${tagger_py} <<EOF
     def _get_tag_for_version(self, version, release=None):
@@ -167,7 +167,7 @@ def patch_tito(pipeline) {
           return "v{}".format(version)
         else:
           return "v{}-{}".format(version, release)
-EOF 
+EOF
 '''
         }
     }
