--- a/jobs/openshift/Jenkinsfile
+++ b/jobs/openshift/Jenkinsfile
@@ -154,9 +154,10 @@ def patch_tito(pipeline) {
         script: 'rpm -q --qf "%{VERSION}" tito'
     )
 
-    if (tito_version == '0.6.11') {
+    def tagger_py = ".tito/lib/origin/tagger/__init__.py"
+    patched = sh returnStatus: true, script: "grep -q 'release is None' ${tagger_py}"
+    if (tito_version == '0.6.11' && patched != 0) {
         pipeline.echo "Patching tito tagger customizations for tito-0.6.11"
-        def tagger_py = ".tito/lib/origin/tagger/__init__.py"
         pipeline.dir(package_name) {
             // remove the get_tag_for_version function
             pipeline.sh "sed -i -e '/_get_tag_for_version/,\$d' ${tagger_py}"
@@ -366,7 +367,7 @@ node(TARGET_NODE) {
 
         stage("tag and push") {
             echo "tag and push"
-            //patch_tito(this)
+            patch_tito(this)
             dir(package_name) {
                 shell(
                     [
