--- a/jobs/openshift-web-console-server/Jenkinsfile
+++ b/jobs/openshift-web-console-server/Jenkinsfile
@@ -162,6 +162,28 @@ node(TARGET_NODE) {
     // clean up before starting
     sh "rm -rf $package_name"
 
+    releases = get_releases(repo_url, branch_prefix)
+    
+    // select the branch to build
+    def branch_name
+    if (BUILD_VERSION in ['master', 'stage']) {
+        branch_name = BUILD_VERSION
+        upstream_branch_name = BUILD_VERSION
+    } else {
+        build_version = new VersionString(BUILD_VERSION)
+        if (releases.find { it == build_version } != -1) {
+            branch_name = branch_prefix + BUILD_VERSION
+            upstream_branch_name = 'release-' + BUILD_VERSION
+        } else {
+            error "invalid build version ${BUILD_VERSION}"
+       }
+    }
+
+    if (debug) {
+        echo "build_version: ${BUILD_VERSION}, branch_name: ${branch_name}"
+    }
+    
+
     sshagent([SSH_KEY_ID]) {
 
         stage("clone ${package_name}") {
