--- a/jobs/openshift-web-console-server/Jenkinsfile
+++ b/jobs/openshift-web-console-server/Jenkinsfile
@@ -166,26 +166,27 @@ node(TARGET_NODE) {
 
     releases = get_releases(repo_url, branch_prefix)
     
+
     // select the branch to build
+    // NOTE: Valid build versions are only those in the releases.
+    // master should not be used, but can default to the most recent release
     def branch_name
+
     if (BUILD_VERSION in ['master', 'stage']) {
-        branch_name = BUILD_VERSION
-        upstream_branch_name = BUILD_VERSION
+        error("Not implemented: master build should be most recent numbered branch")
+    }
+    
+    build_version = new VersionString(BUILD_VERSION)
+    if (releases.find { it == build_version } != -1) {
+        branch_name = branch_prefix + BUILD_VERSION
     } else {
-        build_version = new VersionString(BUILD_VERSION)
-        if (releases.find { it == build_version } != -1) {
-            branch_name = branch_prefix + BUILD_VERSION
-            upstream_branch_name = 'release-' + BUILD_VERSION
-        } else {
-            error "invalid build version ${BUILD_VERSION}"
-       }
+        error "invalid build version ${BUILD_VERSION}"
     }
 
     if (debug) {
         echo "build_version: ${BUILD_VERSION}, branch_name: ${branch_name}"
     }
     
-
     sshagent([SSH_KEY_ID]) {
 
         stage("clone ${package_name}") {
@@ -212,5 +213,14 @@ node(TARGET_NODE) {
             sh "echo 'pkg/assets/bindata.go merge=ours' >> ${gitattributes}"
             sh "echo 'pkg/assets/java/bindata.go merge=ours' >> ${gitattributes}"
         }
+
+        stage("merge master to build branch") {
+            dir(package_name) {
+                sh "git merge master --no-commit --no-ff"
+                sh """git commit -m "Merge master into ${branch_name}" --allow-empty"""
+                sh "git reset --hard HEAD"
+            }
+        }
+        
     }
 }
