--- a/jobs/openshift-web-console-server/Jenkinsfile
+++ b/jobs/openshift-web-console-server/Jenkinsfile
@@ -228,7 +228,17 @@ node(TARGET_NODE) {
 
         stage("merge upstream ${upstream_project_name}") {
             dir(package_path) {
-                sh "GIT_REF=${branch_name} bash -x hack/vendor-console.sh 2>/dev/null | grep 'Vendoring origin-web-console' | awk '{print \$4}'"
+                VC_RESULT =  sh(
+                    script: [
+                        "GIT_REF=${branch_name} bash -x hack/vendor-console.sh 2>/dev/null",
+                        "grep 'Vendoring origin-web-console'",
+                        "awk '{print \$4}'"
+                    ].join(" | "),
+                    returnStdout: true
+                ).trim()
+
+                echo "VC_RESULT: '${VC_RESULT}'"
+            
             }
         }
     }
