--- a/jobs/openshift-web-console-server/Jenkinsfile
+++ b/jobs/openshift-web-console-server/Jenkinsfile
@@ -260,7 +260,7 @@ node(TARGET_NODE) {
         stage("merge master to build branch") {
             dir(package_path) {
                 sh "git merge origin/master --no-commit --no-ff"
-                sh "./hack/install-deps.sh"
+                sh "bash -x ./hack/install-deps.sh"
                 sh "grunt build"
                 sh "git add dist"
                 sh """git commit -m "Merge master into ${branch_name}" --allow-empty"""
